# lagun

./: .gitignore  Makefile  README.md  dev.py  pyproject.toml
docs/: bulk-execution.md
e2e/: fixtures.ts  package.json  playwright.config.ts
e2e/tests/: cell-edit-apply.spec.ts  cell-edit-sequential.spec.ts  cell-edit-stress.spec.ts  cell-edit.spec.ts  deletion-count-refresh.spec.ts  export.spec.ts  motion-performance.spec.ts  motion.spec.ts  query.spec.ts  session.spec.ts
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/: handlers.ts  indexCss.test.ts  motionImports.test.ts  setup.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/constants/: sql.ts
frontend/src/hooks/: useMenuKeyboard.ts
frontend/src/motion/: tokens.ts  useHandoff.ts
frontend/src/store/: queryLogStore.ts  schemaStore.ts  serverConfigStore.ts  sessionStore.ts  tabStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: authIdleTimer.test.ts  authIdleTimer.ts  authRedirect.test.ts  authRedirect.ts  clipboard.ts  toast.ts
lagun/: __init__.py  auth.py  cli.py  main.py
lagun/api/: config.py  export.py  import_data.py  query.py  schema.py  sessions.py  sql_script.py  table_ops.py
lagun/db/: connections_config.py  crypto.py  pool.py  session_store.py  utils.py
lagun/models/: query.py  schema.py  session.py
lagun/static/: THIRD_PARTY_LICENSES.txt  index.html
lagun/static/assets/: BulkConfirmDialog-BMNC4e0j.js  BulkConfirmDialog-BWr9UZK1.js  BulkConfirmDialog-Bebmj9ns.js  BulkConfirmDialog-Bl43vhkx.js  BulkConfirmDialog-BlI009UV.js  BulkConfirmDialog-Bu77uIQN.js  BulkConfirmDialog-CN1H-Xtk.js  BulkConfirmDialog-CUKL8rpC.js  BulkConfirmDialog-CYCi_DDO.js  BulkConfirmDialog-D-nc0qVz.js  BulkConfirmDialog-D-q6npKO.js  BulkConfirmDialog-DF88qOBX.js  BulkConfirmDialog-DWD8l27S.js  BulkConfirmDialog-D_7tyZWn.js  BulkConfirmDialog-Drgvmwxq.js  BulkConfirmDialog-DvCBSzMf.js  BulkConfirmDialog-DxhCrUMG.js  BulkConfirmDialog-F6CKCBs2.js  BulkConfirmDialog-Yfa-Or3L.js  BulkResultSummary-3lcOaa63.js  BulkResultSummary-B2qqdCPP.js  BulkResultSummary-BNYUspuf.js  BulkResultSummary-BOvPzRvf.js  BulkResultSummary-BgLcMtWz.js  BulkResultSummary-BzHSGjHR.js  BulkResultSummary-CCaZ_Boo.js  BulkResultSummary-CJ7TQjq4.js  BulkResultSummary-CLaSA4pL.js  BulkResultSummary-CZDMiWTo.js  (+255 more)
lagun/templates/: login.html
tests/: conftest.py  test_cache_headers.py  test_ldap_integration.py
tests/api/: test_config.py  test_export.py  test_export_special_chars.py  test_import.py  test_query.py  test_schema.py  test_sessions.py  test_sql_classifier.py  test_table_ops.py
tests/fixtures/: sql_classifier.json
tests/unit/: test_crypto.py  test_export_utils.py  test_ldap_session_store.py  test_sql_script.py  test_utils.py
(+54 files in other folders)
