[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lagun"
version = "0.1.3"
description = "A web-based MySQL/MariaDB GUI editor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Anudeep Dhavaleswarapu", email = "anudeepd2@gmail.com" }]
keywords = ["mysql", "mariadb", "gui", "web", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/anudeepd/lagun"
Repository = "https://github.com/anudeepd/lagun"
Issues = "https://github.com/anudeepd/lagun/issues"

[project.scripts]
lagun = "lagun.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[mysql]>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lagun*"]

[tool.setuptools.package-data]
lagun = ["static/**/*", "static/*"]
